# open-scraper

./: .env.example  .gitignore  .pylintrc  Dockerfile  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
examples/: README.md  agent.py  amazon_scraping.py  basic_scraping.py  batch_scraping.py  bing_search_scraping.py  client_helpers.py  concurrent_batch_scraping.py  ebay_scraping.py  ecommerce_product_scraping.py  geo_scraping.py  huggingface_chat_scraping.py  long_landing_screenshots_scraping.py  pagination_scraping.py  proxy_rotation_scraping.py  proxy_sticky_session_scraping.py  requirements.txt  with_extraction_scraping.py
open-crawler/: README.md  pyproject.toml
open-crawler/tests/: test_api_crawl.py
scraper-tester/: README.md  package-lock.json  package.json  server.js
scraper-tester/public/: app.js  index.html  style.css
scripts/: e2e_smoke.py  scrape_url.py
src/: README.md  app.py  jobs.py  main.py  schemas.py  settings.py  worker_pool.py
src/api/: health.py  proxies.py  router.py  scrape.py
src/browser/: errors.py  geo_profile.py  runner.py
src/extract/: extractor.py  models.py
src/proxy/: base.py  countries.py  models.py  resolver.py  socks_bridge.py
src/utils/: ids.py
tests/: conftest.py  test_app.py  test_e2e_smoke.py  test_jobs.py  test_schemas.py  test_worker_pool.py
tests/api/: test_health.py  test_scrape.py
tests/browser/: test_errors.py  test_runner.py
tests/extract/: test_extractor.py  test_models.py
tests/proxy/: test_base.py  test_models.py  (+1 more)
(+8 files in other folders)
